--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="./icon-cv.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/065a8ca0d0.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Céline Rouaire| Portfolio</title>
+  <meta name="description" content="Portfolio - CV de Céline Rouaire">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Céline Rouaire | Portfolio">
+  <meta itemprop="description" content="Portfolio / CV construit avec React.js">
+  <meta property="og:title" content="Mon profil Linkedin">
+  <meta property="og:description" content="Découvrez mon profil Linkedin">
+  <meta property="og:image" content="./assets/linkedin.png">
+  <meta property="og:url" content="https://www.linkedin.com/in/c%C3%A9line-rouaire-b91408165/">
+  <meta property="og:title" content="Mon profil Github">
+  <meta property="og:description" content="Découvrez mon profil Github">
+  <meta property="og:image" content="./assets/github.png">
+  <meta property="og:url" content="https://github.com/GiraltDeReve">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
