finalisation portfolio responsive

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
   <meta itemprop="description" content="Portfolio / CV construit avec React.js">
   <meta property="og:title" content="Mon profil Linkedin">
   <meta property="og:description" content="Découvrez mon profil Linkedin">
-  <meta property="og:image" content="./assets/linkedin.png">
+  <meta property="og:image" content="./assets/images/linkedin.png">
   <meta property="og:url" content="https://www.linkedin.com/in/c%C3%A9line-rouaire-b91408165/">
   <meta property="og:title" content="Mon profil Github">
   <meta property="og:description" content="Découvrez mon profil Github">
-  <meta property="og:image" content="./assets/github.png">
+  <meta property="og:image" content="./assets/images/github.png">
   <meta property="og:url" content="https://github.com/GiraltDeReve">
   </head>
   <body>
