modif ortho + responsive

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <title>Céline Rouaire| Portfolio</title>
   <meta name="description" content="Portfolio - CV de Céline Rouaire">
+  <link rel="stylesheet" href=".././src/App.css">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Céline Rouaire | Portfolio">
